test/classes/initializers/errors/errHandling/inheritsFromThrowingInit.good
inheritsFromThrowingInit.chpl:24: In initializer:
inheritsFromThrowingInit.chpl:27: error: cannot call a throwing function outside of a try! before phase 2
